* Moved the column parsing to a dedicated function for WQP.
* Took out zip option for WQP calls, they are not allowed on WQP anymore.
* Deprecated getQuerySummary. Users should use readWQPsummary instead.
* Added WQX 3.0 profiles
* siteInfo attribute for WQP queries converted to a full station return.
* Cleaned up date conversion in WQP

dataRetrieval 2.7.15
===================
* Update warning about upcoming changes to USGS water quality data.
* Added date sorting to all WQP functions.


dataRetrieval 2.7.14
===================
* Package documentation updated due to roxygen changes
* Update in NLDI function to allow for sites with spaces in the site abbrievations.
* Added an automatic endDate to whatNWISdata if a startDate is given, to make sure it behaves as expected.

dataRetrieval 2.7.13
===================
* Added pcode_to_name function to get WQP characteristics from USGS parameter codes.
* Required readr version 1.4 or greater.

dataRetrieval 2.7.12
===================
* Updated documentation in readWQPdata
* Updates to how NLDI functions handle no data

dataRetrieval 2.7.11
==================
* Updated some documentation to improve examples.
* Changed the check for internet to better account for proxies.
* Fixed bug due to new behavior in NWIS parameter code service.
* Updated documentation for readWQPdata and readWQPsummary

dataRetrieval 2.7.10
==================
* Functions that come back from a server that had and error now return with a message and NULL rather than error.

dataRetrieval 2.7.9
===================
* Fix bug caused by changes in NLDI services
* Adding warnings to NWIS qw functions
* Added new vignette on changes

dataRetrieval 2.7.8
==================
* Fixed missing comments in readNWISqw
* Added Stable Isotopes, Habitat, and Other water quality groupings
* Adding options for updated readr

dataRetrieval 2.7.7
==================
* The NLDI service is now available through the `findNLDI` function.